minor fix, changed favicon

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
       </a>
 
           <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
-            <img src="images/projects/project_template.png" class="img-fluid" alt="">
+            <img src="images/projects/project_template.jpg" class="img-fluid" alt="">
           </div>
 
           <div class="col">
