--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
             <div class="container my-4">
 
               <!-- <a id="project1"> -->
-              <h3>How-does-this-work?: This is a template to illsutrate how a BrainHack project is presented</h3>
+              <h3>How-does-this-work?: This is a template to illustrate how a BrainHack project is presented</h3>
               <!-- </a> -->
               <p>
                 by People that are curious, motivated and friendly
