added ILCB logo

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
           </div>
 
           <div class="d-flex align-items-center justify-content-center">
-            <a href="https://www.cnrs.fr/fr/page-daccueil">
-              <img src="images/cnrs.png" class="img-fluid" alt="" width="100">
+            <a href="https://www.ilcb.fr/">
+              <img src="images/ILCB_logo.png" class="img-fluid" alt="" width="140">
             </a>
           </div>
 
@@ -127,6 +127,12 @@
           <div class="d-flex align-items-center justify-content-center">
             <a href="https://ins-amu.fr/">
               <img src="images/INS_logo.png" class="img-fluid" alt="" width="250">
+            </a>
+          </div>
+
+          <div class="d-flex align-items-center justify-content-center">
+            <a href="https://www.cnrs.fr/fr/page-daccueil">
+              <img src="images/cnrs.png" class="img-fluid" alt="" width="100">
             </a>
           </div>
 
