--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </div>
 
           <div class="d-flex align-items-center justify-content-center">
-            <a href="https://brainhack.org/global2021/">
+            <a href="https://brainhack.org/">
               <img src="images/brainhack.png" class="img-fluid" alt="" width="120">
             </a>
           </div>
