pic + deadline date

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <h2>Register</h2>
         </div>
 
-        <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Tuesday 22 November.<br><b>Registration is now open.</b>
+        <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Friday November the 18th .<br><b>Registration is now open.</b>
           <br>
           For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the organization team</a>. 
           <br>Lunch and social event <b>are not guaranteed</b> for late registrations.</p>
@@ -573,6 +573,18 @@
                 <h4>Etienne Combrisson</h4>
                 <span></span>
                 <p>Postdoc</p>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-lg-4 mt-4">
+            <div class="memberBG d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
+              <div class="pic"><img src="images/team/M².jpg" class="img-fluid" alt="" title="&#128525&#128525&#128525"></div>
+              <div class="member-info">
+                <h4>Manuel Mercier</h4>
+                <span></span>
+                <p>Research Engineer</p>
               </div>
             </div>
           </div>
