--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
 
           <div class="col-lg-4 mt-4">
             <div class="memberBG d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="images/team/M².jpg" class="img-fluid" alt="" title="&#128525&#128525&#128525"></div>
+              <div class="pic"><img src="images/team/M².jpg" class="img-fluid" alt="" title="U+1F643"></div>
               <div class="member-info">
                 <h4>Manuel Mercier</h4>
                 <span></span>
