--- a/index.html
+++ b/index.html
@@ -585,8 +585,8 @@
 
 
           <div class="col-lg-4 mt-4">
-            <div class="memberBG d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="images/team/M².jpg" class="img-fluid" alt="" title="U+1F643"></div>
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
+              <div class="pic"><img src="images/team/M².jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Manuel Mercier</h4>
                 <span></span>
