--- a/index.html
+++ b/index.html
@@ -595,6 +595,17 @@
             </div>
           </div>
 
+          <div class="col-lg-4 mt-4">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
+              <div class="pic"><img src="images/team/MatGilson.JPG" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Matthieu Gilson</h4>
+                <span></span>
+                <p>Junior Professor</p>
+              </div>
+            </div>
+          </div>
+
 
         </div>
 
