--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
             <div class="progress">
               <div class="progress-bar font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                Data visualilzation 50%
+                Data visualization 50%
               </div>
             </div>
 
