added logos sponsors

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
               <img src="images/ILCB_logo.png" class="img-fluid" alt="" width="140">
             </a>
           </div>
+          
+        </div>
+        <div class="d-flex align-items-center justify-content-center" data-aos="zoom-in">
 
           <div class="d-flex align-items-center justify-content-center">
             <a href="https://https://www.inserm.fr/">
@@ -127,6 +130,18 @@
           <div class="d-flex align-items-center justify-content-center">
             <a href="https://ins-amu.fr/">
               <img src="images/INS_logo.png" class="img-fluid" alt="" width="250">
+            </a>
+          </div>
+
+          <div class="d-flex align-items-center justify-content-center">
+            <a href="https://lnc.univ-amu.fr/">
+              <img src="images/logo-LNC.png" class="img-fluid" alt="" width="250">
+            </a>
+          </div>
+
+          <div class="d-flex align-items-center justify-content-center">
+            <a href="https://www.univ-amu.fr/index.php/system/files/2022-08/Fiche_Laennec_2022-03-16_VF.pdf">
+              <img src="images/Logo_Laennec.png" class="img-fluid" alt="" width="250">
             </a>
           </div>
 
