--- a/index.html
+++ b/index.html
@@ -95,10 +95,19 @@
           </div>
 
           <div class="d-flex align-items-center justify-content-center">
-            <a href="https://www.univ-amu.fr/">
-              <img src="images/AMU_logo.png" class="img-fluid" alt="" width="200">
+            <a href="https://ins-amu.fr/">
+              <img src="images/INS_logo.png" class="img-fluid" alt="" width="250">
             </a>
           </div>
+
+          <div class="d-flex align-items-center justify-content-center">
+            <a href="https://lnc.univ-amu.fr/">
+              <img src="images/logo-LNC.png" class="img-fluid" alt="" width="250">
+            </a>
+          </div>
+
+        </div>
+        <div class="d-flex align-items-center justify-content-center" data-aos="zoom-in">
 
           <div class="d-flex align-items-center justify-content-center">
             <a href="https://neuro-marseille.org/">
@@ -117,27 +126,6 @@
               <img src="images/ILCB_logo.png" class="img-fluid" alt="" width="140">
             </a>
           </div>
-          
-        </div>
-        <div class="d-flex align-items-center justify-content-center" data-aos="zoom-in">
-
-          <div class="d-flex align-items-center justify-content-center">
-            <a href="https://https://www.inserm.fr/">
-              <img src="images/Inserm_logo.png" class="img-fluid" alt="" width="120">
-            </a>
-          </div>
-
-          <div class="d-flex align-items-center justify-content-center">
-            <a href="https://ins-amu.fr/">
-              <img src="images/INS_logo.png" class="img-fluid" alt="" width="250">
-            </a>
-          </div>
-
-          <div class="d-flex align-items-center justify-content-center">
-            <a href="https://lnc.univ-amu.fr/">
-              <img src="images/logo-LNC.png" class="img-fluid" alt="" width="250">
-            </a>
-          </div>
 
           <div class="d-flex align-items-center justify-content-center">
             <a href="https://www.univ-amu.fr/index.php/system/files/2022-08/Fiche_Laennec_2022-03-16_VF.pdf">
@@ -145,7 +133,22 @@
             </a>
           </div>
 
+        </div>
+        <div class="d-flex align-items-center justify-content-center" data-aos="zoom-in">
+
           <div class="d-flex align-items-center justify-content-center">
+            <a href="https://www.univ-amu.fr/">
+              <img src="images/AMU_logo.png" class="img-fluid" alt="" width="200">
+            </a>
+          </div>
+
+          <div class="d-flex align-items-center justify-content-center">
+            <a href="https://https://www.inserm.fr/">
+              <img src="images/Inserm_logo.png" class="img-fluid" alt="" width="120">
+            </a>
+          </div>
+
+         <div class="d-flex align-items-center justify-content-center">
             <a href="https://www.cnrs.fr/fr/page-daccueil">
               <img src="images/cnrs.png" class="img-fluid" alt="" width="100">
             </a>
@@ -170,6 +173,8 @@
         </div>
 
         <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Friday November the 18th .<br><b>Registration is now open.</b>
+          <br>
+          Note that there is a <b></b>limitation of 60 people</b> on site and that the event will be <b>light-hybrid</b> (unconference + some proejects).
           <br>
           For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the organization team</a>. 
           <br>Lunch and social event <b>are not guaranteed</b> for late registrations.</p>
