--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
         <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Friday November the 18th .<br><b>Registration is now open.</b>
           <br>
-          Note that there is a <b></b>limitation of 60 people</b> on site and that the event will be <b>light-hybrid</b> (unconference + some proejects).
+          Note that there is a <b></b>limitation of 60 people</b> on site and that the event will be <b>light-hybrid</b> (unconference + some projects).
           <br>
           For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the organization team</a>. 
           <br>Lunch and social event <b>are not guaranteed</b> for late registrations.</p>
