add logo & photo

--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
             </a>
           </div>
 
+          <div class="d-flex align-items-center justify-content-center">
+            <a href="https://crmbm.univ-amu.fr/">
+              <img src="images/cropped-new_logo_dark_cemerem.png" class="img-fluid" alt="" width="150">
+            </a>
+          </div>
+
         </div>
         <div class="d-flex align-items-center justify-content-center" data-aos="zoom-in">
 
@@ -599,6 +605,17 @@
                 <h4>Etienne Combrisson</h4>
                 <span></span>
                 <p>Postdoc</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 mt-4">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
+              <div class="pic"><img src="images/team/Guillaume Auzias.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Guillaume Auzias</h4>
+                <span></span>
+                <p>Researcher</p>
               </div>
             </div>
           </div>
