--- a/index.html
+++ b/index.html
@@ -215,27 +215,20 @@
         <table class="table table-striped">
           <tbody>
             <tr>
-              <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-17h30</th>
-              <td class="table-success"><b>TBA</b></td>
-            </tr>
-<!--             <tr>
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-10h15</th>
-              <td class="table-primary"><b>Introduction to BrainHack Marseille 2021</b>
+              <td class="table-primary"><b>Introduction to BrainHack Marseille 2022</b></td>
                 <ul>
                   <li>09h00-09h15 - Introduction to the event</li>
                   <li>09h15-10h15 - Projects pitches</li>
                 </ul>
-              </td>
             </tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">10h15-12h30</th>
-              <td class="table-success">
-                Participants can chose to attend one of the two parallel sessions:
-                <br>
-                <b>Parallel session 1: Hacking</b>
-                <br>
-                <b>Parallel session 2: Python for non-programmers, a <a style="color: steelblue;" href="https://docs.google.com/document/d/1FXuj_yCW_9gXiR3rOgnBAULweboOQnAwDCx_vHa3-60/edit?usp=sharing">tutorial</a> by Julia Sprenger</b>
-                <br>
+              <th scope="row" class="align-middle text-nowrap" style="width: 10%">10h15-12h30</th>
+              <td class="table-success"><b>Hacking and/or Training:</b>
+                <ul>
+                  <li>11h00-11h45 - <b>Open science</b> By Simon Moré & Manuel Mercier</li>
+                  <li>11h45-12h00 - <b>Reproducible science</b> By Guillaume Auzias</li>
+                </ul>
               </td>
             </tr>
             <tr>
@@ -243,17 +236,20 @@
               <td class="table-danger"><b>Break</b></td>
             </tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">14h00-16h30</th>
+              <th scope="row" class="align-middle text-nowrap">14h00-17h30</th>
               <td class="table-success">
-                <b>Hacking</b>
+                <b>Hacking and/or Training:</b>
+                <ul>
+                  <li>14h30-15h00 - <b>Github basic</b> By David Meunier</li>
+                  <li>15h00-15h30 - <b>Github advanced</b> By David Meunier</li>
+                  <li>15h30-16h00 - <b>Introduction to Python or Matlab</b> By Julia Sprenger & Manuel Mercier</li>
+                </ul>
               </td>
             </tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">16h30-17h30</th>
-              <td class="table-warning"><b>Unconference - Remi Gau, Marie-Hélène Bourget, Martin Szinte & Sylvain Takerkart</b>
-                <p>BIDS and its recent extensions</p>
-              </td>
-            </tr> -->
+              <th scope="row" class="align-middle text-nowrap">17h30-></th>
+              <td class="table-danger"><b>BHM social event!</b></td>
+            </tr>
           </tbody>
         </table>
 
@@ -265,16 +261,22 @@
         <table class="table table-striped">
           <tbody>
             <tr>
-              <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-17h30</th>
-              <td class="table-success"><b>TBA</b></td>
-            </tr>
-<!--             <tr>
-              <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-11h00</th>
-              <td class="table-success"><b>Hacking</b></td>
+              <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-09h30</th>
+              <td class="table-warning"><b>Breakfast</b></td>
             </tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">11h00-12h30</th>
-              <td class="table-warning"><b><a style="color: steelblue;" href="https://docs.google.com/document/d/1x1FjhIweS-qb9D7xleMvuuG3UpGY5Ns4qly1qbiMkUs/edit?usp=sharing">Marseille-Lyon exchange session</a>: software demos and discussion</b>
+              <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h30-12h30</th>
+              <td class="table-success"><b>Hacking and/or Training:</b>
+              <ul>
+                <li>10h00-11h00 - <b>Tools for data science & data analysis</b></li>
+                  <ul>
+                    - <b>MNE</b> by Ruggero Basanisi<br>
+                    - <b>FieldTrip</b> by Manuel Mercier<br> 
+                    - <b>FreeSurfer</b> by Guillaume Auzias<br>
+                    - <b>Scikit-Learn</b> by Matthieu Gilson<br>
+                  </ul>
+                <li>11h00-12h00 - <b>Open source softwares</b> (round table)</li>
+              </ul>
               </td>
             </tr>
             <tr>
@@ -283,12 +285,21 @@
             </tr>
             <tr>
               <th scope="row" class="align-middle text-nowrap">14h00-17h00</th>
-              <td class="table-success"><b>Hacking</b></td>
+              <td class="table-success"><b>Hacking and/or Training:</b>
+                <ul>
+                  <li>15h00-16h00 <b>How to archive code with software heritage</b> by Sabrina Granger</li>
+                  <li>16h00-17h00 <b>Training course about "FAIR4RS & SWH"</b> by Julien Caugant</li>
+                </ul>
+              </td>
             </tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">17h00-20h00</th>
-              <td class="table-danger"><b>BHM social event!</b></td>
-            </tr> -->
+              <th scope="row" class="align-middle text-nowrap">17h00-17h15</th>
+              <td class="table-danger"><b>Break</b></td>
+            </tr>
+            <tr>
+              <th scope="row" class="align-middle text-nowrap">17h15-18h30</th>
+              <td class="table-primary"><b>What Neurosciences In The Anthropocene Era? A participatory workshop</b> By Daniele Schön & Julien Lefevre</td>
+            </tr>
           </tbody>
         </table>
 
@@ -300,37 +311,26 @@
           <table class="table table-striped">
             <tbody>
               <tr>
-                <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-17h30</th>
-                <td class="table-success"><b>TBA</b></td>
+                <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-09h30</th>
+                <td class="table-warning"><b>Breakfast</b></td>
               </tr>
-<!--               <tr>
-                <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-11h00</th>
+              <tr>
+                <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h30-12h30</th>
                 <td class="table-success"><b>Hacking</b></td>
               </tr>
               <tr>
-                <th scope="row" class="align-middle text-nowrap">11h0-12h00</th>
-                <td class="table-warning"><b>Unconference - Paola Mengotti </b>
-                <p>Diversity in Academia: The Women in Neuroscience Repository <a href="http://www.winrepo.org/">(WiNRepo)</a></p>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row" class="align-middle text-nowrap">12h00-14h00</th>
+                <th scope="row" class="align-middle text-nowrap">12h30-14h00</th>
                 <td class="table-danger"><b>Break</b></td>
               </tr>
               <tr>
-                <th scope="row" class="align-middle text-nowrap" style="width: 10%">14h00-15h00</th>
+                <th scope="row" class="align-middle text-nowrap" style="width: 10%">14h00-16h30</th>
                 <td class="table-success"><b>Hacking</b></td>
               </tr>
               <tr>
-                <th scope="row" class="align-middle text-nowrap">15h00-16h00</th>
-                <td class="table-warning"><b>Unconference - Greg Operto</b>
-                  <p>Management and Quality Control of Large Neuroimaging Datasets: Developments From the Barcelonaβeta Brain Research Center, <i><a href="https://www.frontiersin.org/articles/10.3389/fnins.2021.633438/full">(Huguet et al. Frontiers in Neuroscience 2021)</a></i></p>
+                <th scope="row" class="align-middle text-nowrap">16h30-17h30</th>
+                <td class="table-primary"><b>Wrapping up about the projects - closing the BHM 20222</b>
                 </td>
               </tr>
-              <tr>
-                <th scope="row" class="align-middle text-nowrap">16h00-17h00</th>
-                <td class="table-primary"><b>Wrapping up about the projects with everybody</b></td>
-              </tr> -->
             </tbody>
           </table>
       </div>
