--- a/index.html
+++ b/index.html
@@ -216,11 +216,12 @@
           <tbody>
             <tr>
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-10h15</th>
-              <td class="table-primary"><b>Introduction to BrainHack Marseille 2022</b></td>
+              <td class="table-primary"><b>Introduction to BrainHack Marseille 2022</b>
                 <ul>
                   <li>09h00-09h15 - Introduction to the event</li>
                   <li>09h15-10h15 - Projects pitches</li>
                 </ul>
+              </td>
             </tr>
             <tr>
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">10h15-12h30</th>
