--- a/index.html
+++ b/index.html
@@ -562,11 +562,10 @@
           </div>
 
           <div class="col-lg-4 mt-4">
-            <audio id="aud"  preload="auto" src="assets/.audio/.ap.ogg"></audio>
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
               <div class="pic"><img src="images/team/DrPron.png" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4 id="alpr">Alexandre Pron</h4>
+                <h4>Alexandre Pron</h4>
                 <span></span>
                 <p>Research Engineer</p>
               </div>
